Keep Chinese import startup compatible with older Android